# warHammer

./: .gitignore  B_Peculiar_Movie_Preferences.py  CMakeLists.txt  allthatmatters.txt  directoryList.md  package-lock.json
.cph/: .B_Peculiar_Movie_Preferences.py_a29ad63ab2a47913b6369596eb08fd2a.prob  .D_AquaMoon_and_Wrong_Coordinate.cpp_569708c8c807ad606ffaafddc9a0e1e6.prob
academics/: crm.txt  hs.txt  keys.txt  pp.txt  uo.txt
c/: 421MA5010_assignment3_q1.c  421MA5010_assignment3_q2.c  421MA5010_assignment3_q3.c  719cr2008_assignment1_q1.c  719cr2008_assignment1_q3.c  719cr2008_assignment1_q5.c  719cr2008_assignment2_q1.c  719cr2008_assignment2_q4.c  719cr2008_assignment2_q6.c  719cr2008_assignment3_q1.c  719cr2008_assignment3_q2.c  719cr2008_assignment4_q1.c  719cr2008_assignment4_q2.c  719cr2008_assignment4_q3.c  719cr2008_assignment4_q4.c  719cr2008_assignment4_q5.c  719cr2008_assignment4_q6.c  719cr2008_assignment5_q4.c  719cr2008_assignment5_q5.c  paise2rupee.c  tete_as1_q2.c  tete_as1_q4.c  tete_as1_q5.c  tete_as4_q4.c  tete_as4_q5.c  tete_as4_q7.c  tete_as4_q8.c  tete_as5_q1.c  tete_as5_q4.c
c/me/: 719cr2008_assignment2_q3.c  719cr2008_assignment2_q5.c  719cr2008_assignment5_q2.c  719cr2008_assignment5_q6.c  719cr2008_assignment6_q1.c  719cr2008_assignment6_q2.c  719cr2008_assignment6_q3.c  719cr2008_assignment6_q5.c  719cr2008_assignment6_q7.c  719cr2008_assignment6_q8.c  719cr2008_assignment8_q1.c  719cr2008_assignment8_q2.c  719cr2008_assignment8_q4.c  as1_q2.c  as1_q4.c  as2_q2.c  as3_q3.c  as5_q1.c  as5_q3.c  as6_q4.c  as6_q6.c  as8_q4.c  as9q1.c  as9q2.c  as9q3.c  as9q4.c  as9q5.c  as9q6.c  as9q7.c
c/tete/: as1_q1.c  as4_q1.c  as4_q3.c  as6_q2.c  as6_q5.c  ass7_1.c  ass7_2.c  tete_as1_q3.c  tete_as4_q10.c  tete_as4_q2.c  tete_as4_q6.c  tete_as4_q9.c  tete_as5_q2.c  tete_as5_q3.c  tete_as6_q1.c  tete_as6_q3.c  tete_as6_q4.c  tete_as6_q6.c  tete_as7_3.c  tete_as7_4.c
cpp/: dues.cpp  init.cpp  isprime.cpp  output.txt  run.py  template.cpp
cpp/algos/: binarysearch.cpp  bobAndApples.cpp  centreOfgraph.cpp  countTriangles.cpp  demo.txt  fibonacci.cpp  frequencyCountByBS.cpp  input.txt  insertionSort.cpp  inversionCount.cpp  kadaneAlgo.cpp  longestCommonSubsequence.cpp  longestIncreasingSubsequence.cpp  maxBoxStack.cpp  maxNoOfTrees.cpp  maxNonAdjacentSUm.cpp  maxSubarray.cpp  mergeCount.cpp  mergesort.cpp  minJumps.cpp  nkCoins.cpp  nkLadder.cpp  nodeAtKDistance.cpp  output.txt  primsAlgo.cpp  quickSelect.cpp  quickSort.cpp  rotatedSearch.cpp  run.py  segementTree.cpp  separate_path.cpp  shuffledAnagrams.cpp  slidingHashmap.cpp  smallestString.cpp  sparseSearch.cpp  spiralTraversing.cpp  tourist.cpp
cpp/dataTypes/: anarghamCounter.cpp  bfs.cpp  bfsShortestPath.cpp  biggestXorPair.cpp  binarySearchTree.cpp  binaryTree.cpp  countRectangles.cpp  dfs.cpp  dijkstra.cpp  dsu_1.cpp  graphCycleDetection.cpp  graphs.cpp  heaps.cpp  init.cpp  input.txt  kWayMerge.cpp  largestIsland.cpp  linkedGraphs.cpp  linkedlist.cpp  linkedlistagain.cpp  mergeRopes.cpp  minBars.cpp  newBT.cpp  noofways.cpp  output.txt  (+8 more)
manhattan/: main.py
python/: .gitignore
realme/: package-lock.json
sagittarius/: package.json
twentynine/: db.sqlite3  extra.py  input.txt  manage.py
txt/: mylogs.txt  rohan_exercise.txt
web/: test.jsx
xspf/: btr.xspf  cb_dp.xspf  cb_graph.xspf  cn_adv_dsa.xspf  colt.xspf  jonas.xspf
(+358 files in other folders)
