# cmake_minimum_required(VERSION <specify CMake version here>)
project(warHammer)

set(CMAKE_CXX_STANDARD 14)

add_executable(warHammer
        cpp/algos/binarysearch.cpp
        cpp/algos/bobAndApples.cpp
        cpp/algos/bubbleSort.cpp
        cpp/algos/centreOfgraph.cpp
        cpp/algos/countRectangles.cpp
        cpp/algos/countTriangles.cpp
        cpp/algos/fibonacci.cpp
        cpp/algos/frequencyCountByBS.cpp
        cpp/algos/insertionSort.cpp
        cpp/algos/inversionCount.cpp
        cpp/algos/kadaneAlgo.cpp
        cpp/algos/kWayMerge.cpp
        cpp/algos/longestCommonSubsequence.cpp
        cpp/algos/longestIncreasingSubsequence.cpp
        cpp/algos/maxBoxStack.cpp
        cpp/algos/maxNonAdjacentSUm.cpp
        cpp/algos/maxNoOfTrees.cpp
        cpp/algos/maxSubarray.cpp
        cpp/algos/mergeCount.cpp
        cpp/algos/mergeRopes.cpp
        cpp/algos/mergesort.cpp
        cpp/algos/minJumps.cpp
        cpp/algos/nkCoins.cpp
        cpp/algos/nkLadder.cpp
        cpp/algos/nodeAtKDistance.cpp
        cpp/algos/primsAlgo.cpp
        cpp/algos/quickSelect.cpp
        cpp/algos/quickSort.cpp
        cpp/algos/rotatedSearch.cpp
        cpp/algos/runningMedian.cpp
        cpp/algos/runningMeedian.cpp
        cpp/algos/selectionSort.cpp
        cpp/algos/separate_path.cpp
        cpp/algos/shuffledAnagrams.cpp
        cpp/algos/slidingHashmap.cpp
        cpp/algos/smallestString.cpp
        cpp/algos/sparseSearch.cpp
        cpp/algos/spiralTraversing.cpp
        cpp/algos/tourist.cpp
        cpp/dataTypes/anarghamCounter.cpp
        cpp/dataTypes/bfs.cpp
        cpp/dataTypes/bfsShortestPath.cpp
        cpp/dataTypes/biggestXorPair.cpp
        cpp/dataTypes/binarySearchTree.cpp
        cpp/dataTypes/binaryTree.cpp
        cpp/dataTypes/dfs.cpp
        cpp/dataTypes/dijkstra.cpp
        "cpp/dataTypes/double linked list.cpp"
        cpp/dataTypes/dsu_1.cpp
        cpp/dataTypes/graphCycleDetection.cpp
        cpp/dataTypes/graphs.cpp
        cpp/dataTypes/heaps.cpp
        cpp/dataTypes/largestIsland.cpp
        cpp/dataTypes/linkedGraphs.cpp
        cpp/dataTypes/linkedlist.cpp
        cpp/dataTypes/linkedlistagain.cpp
        cpp/dataTypes/minBars.cpp
        cpp/dataTypes/newBT.cpp
        cpp/dataTypes/rough.cpp
        cpp/dataTypes/stack.cpp
        cpp/dataTypes/stackagain.cpp
        cpp/dataTypes/suffixTrie.cpp
        cpp/dataTypes/treeToLinkedList.cpp
        cpp/dataTypes/trie.cpp
        cpp/primitive/array.cpp
        cpp/primitive/bin2dec.cpp
        cpp/primitive/pascal.cpp
        cpp/primitive/pattern1.cpp
        cpp/primitive/pattern2.cpp
        cpp/primitive/string.cpp
        cpp/primitive/tree.cpp
        cpp/workspace/balancedBrackets.cpp
        cpp/workspace/countInversions.cpp
        cpp/workspace/countRetundancies.cpp
        cpp/workspace/dec2hex.cpp
        cpp/workspace/goat.cpp
        cpp/workspace/hex2dec.cpp
        cpp/workspace/init2.cpp
        cpp/workspace/isprime.cpp
        cpp/workspace/ll.cpp
        cpp/workspace/pascal.cpp
        cpp/workspace/pattern1.cpp
        cpp/workspace/pattern2.cpp
        cpp/workspace/rough.cpp
        cpp/workspace/smartKeypad.cpp
        cpp/workspace/sodukuSolver.cpp
        cpp/workspace/stack.cpp)
